# DevMonitor_for_Pis

./: README.md
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/: CMakeLists.txt  DevMonitor_RPi.guiguider  LICENSE.txt  SCR.txt
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/import/font/Licenses/: License-AmaticSC.txt  License-Amiko.txt
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/lvgl/: lvgl.mk
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/lvgl-simulator/: Makefile  README.md
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/lvgl-simulator/lv_drivers/: README.md  lv_drivers.mk  lv_drv_conf_template.h
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/lvgl-simulator/lv_drivers/display/: GC9A01.c  GC9A01.h  ILI9341.c  ILI9341.h  SHARP_MIP.c  SHARP_MIP.h  SSD1963.c  drm.h  (+5 more)
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/lvgl-simulator/rlottie/: rlottie.h
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/lvgl-simulator/wels/: codec_app_def.h  codec_ver.h
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/ports/linux/: main.c
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/ports/qnx/: Makefile.lvgl  README.md  build-qnx.bat  qnx.c
RaspberryPi_Zero2w/GuiGuider_Proj/DevMonitor_RPi/temp/: board.h  simulator.h
RaspberryPi_Zero2w/Software/: CMakeLists.txt
RaspberryPi_Zero2w/Software/guiguider/: events_init.c  gui_guider.h  setup_scr_screen.c
RaspberryPi_Zero2w/Software/guiguider/guider_fonts/: lv_font_montserratMedium_10.c  lv_font_montserratMedium_12.c  lv_font_montserratMedium_13.c  lv_font_montserratMedium_16.c  lv_font_montserratMedium_8.c
RaspberryPi_Zero2w/Software/guiguider/images/: _download_alpha_11x11.c  _download_alpha_16x16.c  _flow_alpha_20x20.c  _rpi_logo_e7_16bit_alpha_55x55.c  _temp_alpha_30x30.c  _upload_alpha_11x11.c  _web_35x35.c
RaspberryPi_Zero2w/Software/inc/: DevInfo.h  NetTools.h  st7789.h  user_cfg.h
RaspberryPi_Zero2w/Software/src/: DevInfo.c  NetTools.c  main.c  st7789.c
(+170 files in other folders)
